0.1-alpha3/_sources/gene/AGAP004725.rst.txt
:orphan:



AGAP004725
==========

Location: **2L:2,797,664-2,801,444**

Name: **eIF3c**

Description: **Eukaryotic translation initiation factor 3 subunit c**.

External links:
`VectorBase <https://www.vectorbase.org/Anopheles_gambiae/Gene/Summary?g=AGAP004725>`_ |
`Ag1000G genome browser <https://www.malariagen.net/apps/ag1000g/phase1-AR3/index.html?genome_region=2L:2797664-2801444#genomebrowser>`_





Overlapping selection signals
-----------------------------

The following signals have a focus which overlaps this gene.

.. cssclass:: table-hover
.. list-table::
    :widths: auto
    :header-rows: 1

    * - Signal
      - Statistic
      - Population
      - Focus
      - Peak model :math:`\Delta_{i}`
      - Max. percentile
      - Known locus
    * - :doc:`../signal/H12/BFM/2/1/index`
      - H12
      - Burkina Faso *An. coluzzii*
      - 2L:2,474,895-2,894,895
      - 1,800
      - 99.9%
      - Vgsc
    * - :doc:`../signal/H12/UGS/2/2/index`
      - H12
      - Uganda *An. gambiae*
      - 2L:1,814,895-3,094,895
      - 1,377
      - 100.0%
      - Vgsc
    * - :doc:`../signal/XPEHH/BFS.GWA/2/1/index`
      - XPEHH
      - Burkina Faso *An. gambiae*
      - 2L:2,234,895-3,274,895
      - 938
      - 99.6%
      - Vgsc
    * - :doc:`../signal/XPEHH/BFM.GWA/2/1/index`
      - XPEHH
      - Burkina Faso *An. coluzzii*
      - 2L:2,334,895-2,974,895
      - 917
      - 99.8%
      - Vgsc
    * - :doc:`../signal/H12/GAS/2/2/index`
      - H12
      - Gabon *An. gambiae*
      - 2L:2,734,895-3,094,895
      - 325
      - 99.8%
      - nan
    






Comments
--------


.. raw:: html

    <div id="disqus_thread"></div>
    <script>
    
    var disqus_config = function () {
        this.page.identifier = '/gene/AGAP004725';
    };
    
    (function() { // DON'T EDIT BELOW THIS LINE
    var d = document, s = d.createElement('script');
    s.src = 'https://agam-selection-atlas.disqus.com/embed.js';
    s.setAttribute('data-timestamp', +new Date());
    (d.head || d.body).appendChild(s);
    })();
    </script>
    <noscript>Please enable JavaScript to view the <a href="https://disqus.com/?ref_noscript">comments.</a></noscript>


